web-infras/parser/tests/fixtures/babel/es2015/class-methods/direct-super-outside-constructor/output.txt
[SyntaxError]: super() is only valid in derived class constructors (2,9)
2|  x () {super()}
 |       ^
[SyntaxError]: `super()` is only valid inside a class constructor of a subclass. Maybe a typo in the method name ('constructor') or not extending another class? (2,9)
2|  x () {super()}
 |       ^
